# goodhealth

./: .gitignore  .vercelignore  BUILD_ISSUE_NEXTJS_16.md  CODECOV_SETUP.md  DEPLOYMENT.md  README.md  SCHEMA_ISSUES.md  SCHEMA_REDUNDANCY_AUDIT.md  SELFIES_SETUP.md  SETUP.md  TESTING.md  eslint.config.mjs  jest.config.js  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  railway.json  sonar-project.properties  supabase-migration-effort.sql  supabase-schema.sql  vercel.json
.claude/: context.md  instructions.md
app/: globals.css  layout.tsx  page.tsx
backend/: .dockerignore  Dockerfile  README.md  nixpacks.toml  pyproject.toml  railpack.toml  railway.json  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: __init__.py  goal.py  measurement.py  profile.py  selfie.py  weekly_analysis.py  workout.py  workout_plan.py
backend/app/routers/: __init__.py  goals.py  measurements.py  profiles.py  selfies.py  weekly_analysis.py  workout_plans.py  workouts.py
backend/app/services/: __init__.py  ai_plan_generator.py  gemini_client.py  goal_sync.py  goals_crud.py  measurements.py  profiles.py  selfies.py  weekly_analyzer.py  workout_plans_crud.py  workouts.py
backend/app/utils/: __init__.py  supabase_client.py  unit_converter.py
backend/migrations/: 002_add_weekly_workout_analysis.sql  003_add_user_preferences.sql  004_add_goal_status.sql  005_fix_handle_new_user_trigger.sql  README.md
backend/scripts/: apply-migration-005.sh
backend/tests/: __init__.py  conftest.py  test_api_goals.py  test_api_measurements.py  test_api_profiles.py  test_api_selfies.py  test_api_weekly_analysis.py  test_api_workout_plans.py  test_api_workouts.py  test_goal_sync.py  test_unit_converter.py
components/: accent-theme-selector.tsx  exercise-actions.tsx  goal-actions.tsx  goal-edit-form.tsx  goals-calendar.tsx  measurement-form.tsx  measurements-chart.tsx  measurements-list.tsx  motivational-quote.tsx  selfie-upload.tsx  theme-provider.tsx  theme-toggle.tsx  weekly-analysis-card.tsx  workout-actions.tsx  workout-edit-form.tsx  workout-selfie-display.tsx
(+269 files in other folders)
